modified lab02 flcd

--- a/Semester 4/Databases Management Systems/lab02/App.config
+++ b/Semester 4/Databases Management Systems/lab02/App.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
 	<connectionStrings>
-		<add name="ConnectionString" connectionString="Server=DESKTOP-3SQEJ2L\SQLEXPRESS;Database={0};Trusted_Connection=true"/>
+		<add name="ConnectionString" connectionString="Server=DESKTOP-KKCEHOF\SQLEXPRESS;Database=UFC_database;Trusted_Connection=true"/>
 	</connectionStrings>
 	<appSettings>
-		<add key="Database" value ="Rap"/>
+		<add key="Database" value UFC_database"/>
 		
-		<add key="ParentTableName" value="RapBands"/><add key="ChildTableName" value ="RapBandAlbums"/><add key="ParentReferencedKey" value="bandID"/><add key="ChildForeignKey" value="bandID"/>
+		<add key="ParentTableName" value="Event"/><add key="ChildTableName" value ="Match"/><add key="ParentReferencedKey" value="Eid"/><add key="ChildForeignKey" value="Eid"/>
 
-		<!--<add key="ParentTableName" value="RapBands"/><add key="ChildTableName" value ="Rappers"/><add key="ParentReferencedKey" value="bandID"/><add key="ChildForeignKey" value="bandID"/>-->
+		<!--<add key="ParentTableName" value="Event"/><add key="ChildTableName" value ="Match"/><add key="ParentReferencedKey" value="Eid"/><add key="ChildForeignKey" value="Eid"/>-->
 	</appSettings>
 </configuration>
